// Copyright (c) 2019 Uber Technologies, Inc.
//
// Permission is hereby granted, free of charge, to any person obtaining a copy
// of this software and associated documentation files (the "Software"), to deal
// in the Software without restriction, including without limitation the rights
// to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
// copies of the Software, and to permit persons to whom the Software is
// furnished to do so, subject to the following conditions:
//
// The above copyright notice and this permission notice shall be included in
// all copies or substantial portions of the Software.
//
// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
// IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
// FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
// AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
// LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
// OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
// THE SOFTWARE.

syntax = "proto3";

package uber.foo.v1;

option csharp_namespace = "Uber.Foo.V1";
option go_package = "foov1";
option java_multiple_files = true;
option java_outer_classname = "ExcitedApiProto";
option java_package = "com.uber.foo.v1";
option objc_class_prefix = "UFX";
option php_namespace = "Uber\\Foo\\V1";

// This handles exciting transformations.
service ExcitedAPI {
  // This adds an exclamation to the request value.
  rpc Exclamation(ExclamationRequest) returns (ExclamationResponse);
  // This adds an exclamation to the combined request values.
  rpc ExclamationClientStream(stream ExclamationRequest) returns (ExclamationResponse);
  // This adds an exclamation to the request value
  // and streams each character as a response.
  rpc ExclamationServerStream(ExclamationRequest) returns (stream ExclamationResponse);
  // This adds an exclamation to the each request value.
  rpc ExclamationBidiStream(stream ExclamationRequest) returns (stream ExclamationResponse);
}

message ExclamationRequest {
  string value = 1;
}

message ExclamationResponse {
  string value = 1;
}
